[workspace]
members = [
    "10-module-functions",
    "20-pub-fields-cache",
    "30-priv-fields",
    "40-priv-layered",
    "50-traits",
    "60-dyn-traits",
    # "70-multi-cache",
    # "75-multi-cache-multi-trait",
    # "80-multi-crate",
    # "81-hash-cache",
    # "82-remote-cache",
    # "89-multi-crate-redis-cache",
]
